# IT-TV-One--Web-

./: package-lock.json
.github/workflows/: windows-build.yml
tv/: package-lock.json  package.json
tv/src/: App.css  App.jsx  main.jsx
tv/src-tauri/: Cargo.toml  tauri.conf.json
tv/src-tauri/src/: lib.rs
tv/src/AppData/: Icons.js  Images.js  routes.txt  stops.txt
tv/src/AppData/gtfs/: areas.txt  calendar_dates.txt  feed_info.txt  stop_areas.txt  transfers.txt  trip_pattern.txt
tv/src/Components/: DateTimeCard.jsx  GuestWiFiCard.jsx  HoursCard.jsx  NewsCard.jsx  SpotifyPlayerCard.jsx  TransitCard.jsx  WeatherCard.jsx
